# Resume-Builder

./: .gitignore  pyproject.toml  todo
app/examples/: cv_format.json
app/prompts/: convert_cv_json.md  system.md
app/renderers/: base.py  latex_resume.py  simple.py
app/resume_templates/: simple.tex
app/services/: ai_client.py  resume_builder.py
app/utils/: latex.py  registry.py
src/: main.py  utils.py
